// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Timestamp /> should accept ISO string as value 1`] = `
.c1.c1.c1.c1.c1 {
  color: hsla(0,0%,2%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.18200000000000002px;
  -moz-letter-spacing: -0.18200000000000002px;
  -ms-letter-spacing: -0.18200000000000002px;
  letter-spacing: -0.18200000000000002px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <div
    aria-label="May 30, 2026"
    class="c0"
    data-blade-component="timestamp"
  >
    <span
      class="c1"
      data-blade-component="text"
      letter-spacing="50"
    >
      May 30, 2026
    </span>
  </div>
</div>
`;

exports[`<Timestamp /> should accept Unix timestamp (ms) as value 1`] = `
.c1.c1.c1.c1.c1 {
  color: hsla(0,0%,2%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.18200000000000002px;
  -moz-letter-spacing: -0.18200000000000002px;
  -ms-letter-spacing: -0.18200000000000002px;
  letter-spacing: -0.18200000000000002px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <div
    aria-label="May 30, 2026"
    class="c0"
    data-blade-component="timestamp"
  >
    <span
      class="c1"
      data-blade-component="text"
      letter-spacing="50"
    >
      May 30, 2026
    </span>
  </div>
</div>
`;

exports[`<Timestamp /> should apply custom color 1`] = `
.c1.c1.c1.c1.c1 {
  color: hsla(150,100%,23%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.18200000000000002px;
  -moz-letter-spacing: -0.18200000000000002px;
  -ms-letter-spacing: -0.18200000000000002px;
  letter-spacing: -0.18200000000000002px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <div
    aria-label="May 30, 2026, 6:38 PM"
    class="c0"
    data-blade-component="timestamp"
  >
    <span
      class="c1"
      data-blade-component="text"
      letter-spacing="50"
    >
      May 30, 2026, 6:38 PM
    </span>
  </div>
</div>
`;

exports[`<Timestamp /> should render Timestamp with default props (dateTime format) 1`] = `
.c1.c1.c1.c1.c1 {
  color: hsla(0,0%,2%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.18200000000000002px;
  -moz-letter-spacing: -0.18200000000000002px;
  -ms-letter-spacing: -0.18200000000000002px;
  letter-spacing: -0.18200000000000002px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <div
    aria-label="May 30, 2026, 6:38 PM"
    class="c0"
    data-blade-component="timestamp"
  >
    <span
      class="c1"
      data-blade-component="text"
      letter-spacing="50"
    >
      May 30, 2026, 6:38 PM
    </span>
  </div>
</div>
`;

exports[`<Timestamp /> should render all dateStyle options 1`] = `
.c1.c1.c1.c1.c1 {
  color: hsla(0,0%,2%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.18200000000000002px;
  -moz-letter-spacing: -0.18200000000000002px;
  -ms-letter-spacing: -0.18200000000000002px;
  letter-spacing: -0.18200000000000002px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <div
    aria-label="5/30/26"
    class="c0"
    data-blade-component="timestamp"
  >
    <span
      class="c1"
      data-blade-component="text"
      letter-spacing="50"
    >
      5/30/26
    </span>
  </div>
</div>
`;

exports[`<Timestamp /> should render all dateStyle options 2`] = `
.c1.c1.c1.c1.c1 {
  color: hsla(0,0%,2%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.18200000000000002px;
  -moz-letter-spacing: -0.18200000000000002px;
  -ms-letter-spacing: -0.18200000000000002px;
  letter-spacing: -0.18200000000000002px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <div
    aria-label="May 30, 2026"
    class="c0"
    data-blade-component="timestamp"
  >
    <span
      class="c1"
      data-blade-component="text"
      letter-spacing="50"
    >
      May 30, 2026
    </span>
  </div>
</div>
`;

exports[`<Timestamp /> should render all dateStyle options 3`] = `
.c1.c1.c1.c1.c1 {
  color: hsla(0,0%,2%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.18200000000000002px;
  -moz-letter-spacing: -0.18200000000000002px;
  -ms-letter-spacing: -0.18200000000000002px;
  letter-spacing: -0.18200000000000002px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <div
    aria-label="May 30, 2026"
    class="c0"
    data-blade-component="timestamp"
  >
    <span
      class="c1"
      data-blade-component="text"
      letter-spacing="50"
    >
      May 30, 2026
    </span>
  </div>
</div>
`;

exports[`<Timestamp /> should render all dateStyle options 4`] = `
.c1.c1.c1.c1.c1 {
  color: hsla(0,0%,2%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.18200000000000002px;
  -moz-letter-spacing: -0.18200000000000002px;
  -ms-letter-spacing: -0.18200000000000002px;
  letter-spacing: -0.18200000000000002px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <div
    aria-label="Saturday, May 30, 2026"
    class="c0"
    data-blade-component="timestamp"
  >
    <span
      class="c1"
      data-blade-component="text"
      letter-spacing="50"
    >
      Saturday, May 30, 2026
    </span>
  </div>
</div>
`;

exports[`<Timestamp /> should render all text sizes 1`] = `
.c1.c1.c1.c1.c1 {
  color: hsla(0,0%,2%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.625rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 0.8125rem;
  -webkit-letter-spacing: -0.13px;
  -moz-letter-spacing: -0.13px;
  -ms-letter-spacing: -0.13px;
  letter-spacing: -0.13px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <div
    aria-label="May 30, 2026, 6:38 PM"
    class="c0"
    data-blade-component="timestamp"
  >
    <span
      class="c1"
      data-blade-component="text"
      letter-spacing="50"
    >
      May 30, 2026, 6:38 PM
    </span>
  </div>
</div>
`;

exports[`<Timestamp /> should render all text sizes 2`] = `
.c1.c1.c1.c1.c1 {
  color: hsla(0,0%,2%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.75rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.0625rem;
  -webkit-letter-spacing: -0.15600000000000003px;
  -moz-letter-spacing: -0.15600000000000003px;
  -ms-letter-spacing: -0.15600000000000003px;
  letter-spacing: -0.15600000000000003px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <div
    aria-label="May 30, 2026, 6:38 PM"
    class="c0"
    data-blade-component="timestamp"
  >
    <span
      class="c1"
      data-blade-component="text"
      letter-spacing="50"
    >
      May 30, 2026, 6:38 PM
    </span>
  </div>
</div>
`;

exports[`<Timestamp /> should render all text sizes 3`] = `
.c1.c1.c1.c1.c1 {
  color: hsla(0,0%,2%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.18200000000000002px;
  -moz-letter-spacing: -0.18200000000000002px;
  -ms-letter-spacing: -0.18200000000000002px;
  letter-spacing: -0.18200000000000002px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <div
    aria-label="May 30, 2026, 6:38 PM"
    class="c0"
    data-blade-component="timestamp"
  >
    <span
      class="c1"
      data-blade-component="text"
      letter-spacing="50"
    >
      May 30, 2026, 6:38 PM
    </span>
  </div>
</div>
`;

exports[`<Timestamp /> should render all text sizes 4`] = `
.c1.c1.c1.c1.c1 {
  color: hsla(0,0%,2%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 1rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.5rem;
  -webkit-letter-spacing: -0.528px;
  -moz-letter-spacing: -0.528px;
  -ms-letter-spacing: -0.528px;
  letter-spacing: -0.528px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <div
    aria-label="May 30, 2026, 6:38 PM"
    class="c0"
    data-blade-component="timestamp"
  >
    <span
      class="c1"
      data-blade-component="text"
      letter-spacing="25"
    >
      May 30, 2026, 6:38 PM
    </span>
  </div>
</div>
`;

exports[`<Timestamp /> should render all text weights 1`] = `
.c1.c1.c1.c1.c1 {
  color: hsla(0,0%,2%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.18200000000000002px;
  -moz-letter-spacing: -0.18200000000000002px;
  -ms-letter-spacing: -0.18200000000000002px;
  letter-spacing: -0.18200000000000002px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <div
    aria-label="May 30, 2026, 6:38 PM"
    class="c0"
    data-blade-component="timestamp"
  >
    <span
      class="c1"
      data-blade-component="text"
      letter-spacing="50"
    >
      May 30, 2026, 6:38 PM
    </span>
  </div>
</div>
`;

exports[`<Timestamp /> should render all text weights 2`] = `
.c1.c1.c1.c1.c1 {
  color: hsla(0,0%,2%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 500;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.18200000000000002px;
  -moz-letter-spacing: -0.18200000000000002px;
  -ms-letter-spacing: -0.18200000000000002px;
  letter-spacing: -0.18200000000000002px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <div
    aria-label="May 30, 2026, 6:38 PM"
    class="c0"
    data-blade-component="timestamp"
  >
    <span
      class="c1"
      data-blade-component="text"
      letter-spacing="50"
    >
      May 30, 2026, 6:38 PM
    </span>
  </div>
</div>
`;

exports[`<Timestamp /> should render all text weights 3`] = `
.c1.c1.c1.c1.c1 {
  color: hsla(0,0%,2%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 600;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.18200000000000002px;
  -moz-letter-spacing: -0.18200000000000002px;
  -ms-letter-spacing: -0.18200000000000002px;
  letter-spacing: -0.18200000000000002px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <div
    aria-label="May 30, 2026, 6:38 PM"
    class="c0"
    data-blade-component="timestamp"
  >
    <span
      class="c1"
      data-blade-component="text"
      letter-spacing="50"
    >
      May 30, 2026, 6:38 PM
    </span>
  </div>
</div>
`;

exports[`<Timestamp /> should render all timeStyle options 1`] = `
.c1.c1.c1.c1.c1 {
  color: hsla(0,0%,2%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.18200000000000002px;
  -moz-letter-spacing: -0.18200000000000002px;
  -ms-letter-spacing: -0.18200000000000002px;
  letter-spacing: -0.18200000000000002px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <div
    aria-label="6:38 PM"
    class="c0"
    data-blade-component="timestamp"
  >
    <span
      class="c1"
      data-blade-component="text"
      letter-spacing="50"
    >
      6:38 PM
    </span>
  </div>
</div>
`;

exports[`<Timestamp /> should render all timeStyle options 2`] = `
.c1.c1.c1.c1.c1 {
  color: hsla(0,0%,2%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.18200000000000002px;
  -moz-letter-spacing: -0.18200000000000002px;
  -ms-letter-spacing: -0.18200000000000002px;
  letter-spacing: -0.18200000000000002px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <div
    aria-label="6:38:32 PM"
    class="c0"
    data-blade-component="timestamp"
  >
    <span
      class="c1"
      data-blade-component="text"
      letter-spacing="50"
    >
      6:38:32 PM
    </span>
  </div>
</div>
`;

exports[`<Timestamp /> should render all timeStyle options 3`] = `
.c1.c1.c1.c1.c1 {
  color: hsla(0,0%,2%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.18200000000000002px;
  -moz-letter-spacing: -0.18200000000000002px;
  -ms-letter-spacing: -0.18200000000000002px;
  letter-spacing: -0.18200000000000002px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <div
    aria-label="6:38:32 PM GMT+5:30"
    class="c0"
    data-blade-component="timestamp"
  >
    <span
      class="c1"
      data-blade-component="text"
      letter-spacing="50"
    >
      6:38:32 PM GMT+5:30
    </span>
  </div>
</div>
`;

exports[`<Timestamp /> should render all timeStyle options 4`] = `
.c1.c1.c1.c1.c1 {
  color: hsla(0,0%,2%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.18200000000000002px;
  -moz-letter-spacing: -0.18200000000000002px;
  -ms-letter-spacing: -0.18200000000000002px;
  letter-spacing: -0.18200000000000002px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <div
    aria-label="6:38:32 PM India Standard Time"
    class="c0"
    data-blade-component="timestamp"
  >
    <span
      class="c1"
      data-blade-component="text"
      letter-spacing="50"
    >
      6:38:32 PM India Standard Time
    </span>
  </div>
</div>
`;

exports[`<Timestamp /> should render with format="date" 1`] = `
.c1.c1.c1.c1.c1 {
  color: hsla(0,0%,2%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.18200000000000002px;
  -moz-letter-spacing: -0.18200000000000002px;
  -ms-letter-spacing: -0.18200000000000002px;
  letter-spacing: -0.18200000000000002px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <div
    aria-label="May 30, 2026"
    class="c0"
    data-blade-component="timestamp"
  >
    <span
      class="c1"
      data-blade-component="text"
      letter-spacing="50"
    >
      May 30, 2026
    </span>
  </div>
</div>
`;

exports[`<Timestamp /> should render with format="relative" 1`] = `
.c1.c1.c1.c1.c1 {
  color: hsla(0,0%,2%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.18200000000000002px;
  -moz-letter-spacing: -0.18200000000000002px;
  -ms-letter-spacing: -0.18200000000000002px;
  letter-spacing: -0.18200000000000002px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <div
    aria-label="5 minutes ago"
    class="c0"
    data-blade-component="timestamp"
  >
    <span
      class="c1"
      data-blade-component="text"
      letter-spacing="50"
    >
      5 minutes ago
    </span>
  </div>
</div>
`;

exports[`<Timestamp /> should render with format="time" 1`] = `
.c1.c1.c1.c1.c1 {
  color: hsla(0,0%,2%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.18200000000000002px;
  -moz-letter-spacing: -0.18200000000000002px;
  -ms-letter-spacing: -0.18200000000000002px;
  letter-spacing: -0.18200000000000002px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <div
    aria-label="6:38 PM"
    class="c0"
    data-blade-component="timestamp"
  >
    <span
      class="c1"
      data-blade-component="text"
      letter-spacing="50"
    >
      6:38 PM
    </span>
  </div>
</div>
`;

exports[`<Timestamp /> should render with hourCycle="12h" 1`] = `
.c1.c1.c1.c1.c1 {
  color: hsla(0,0%,2%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.18200000000000002px;
  -moz-letter-spacing: -0.18200000000000002px;
  -ms-letter-spacing: -0.18200000000000002px;
  letter-spacing: -0.18200000000000002px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <div
    aria-label="6:38 PM"
    class="c0"
    data-blade-component="timestamp"
  >
    <span
      class="c1"
      data-blade-component="text"
      letter-spacing="50"
    >
      6:38 PM
    </span>
  </div>
</div>
`;

exports[`<Timestamp /> should render with hourCycle="24h" 1`] = `
.c1.c1.c1.c1.c1 {
  color: hsla(0,0%,2%,1);
  font-family: "Inter","Inter Fallback Arial",Arial;
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  -webkit-letter-spacing: -0.18200000000000002px;
  -moz-letter-spacing: -0.18200000000000002px;
  -ms-letter-spacing: -0.18200000000000002px;
  letter-spacing: -0.18200000000000002px;
  margin: 0;
  padding: 0;
}

.c0.c0.c0.c0.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div>
  <div
    aria-label="18:38"
    class="c0"
    data-blade-component="timestamp"
  >
    <span
      class="c1"
      data-blade-component="text"
      letter-spacing="50"
    >
      18:38
    </span>
  </div>
</div>
`;
